Fixing heatmap alignment

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,8 +7,8 @@
 .color-scale-4 { fill: #196127; }
 
 .react-calendar-heatmap rect {
-      width: 16px;
-  height: 16px;
+      width: 12px !important;
+  height: 12px !important;
   rx: 3;
   ry: 3;
 }
